# linux_app_sdk_SmartScreen

./: .gitattributes  README.md  app_sdk_my_v_1.tar
app_sdk_mine/: CMakeLists.txt
app_sdk_mine/app1/: CMakeLists.txt  main.c  page.c  page.h
app_sdk_mine/app1/res/: res_conf.h
app_sdk_mine/app1/res/font/: font_conf.h
app_sdk_mine_v1.0/app1/: CMakeLists.txt  main.c  page.c
app_sdk_mine_v1.0/app1/res/: res_conf.h
app_sdk_mine_v1.0/app1/res/image/: image_conf.h
